fix broken css

--- a/src/app/components/card/card.module.css
+++ b/src/app/components/card/card.module.css
@@ -1,10 +1,32 @@
 .card{
-    width: 8rem;
-    height: 12rem;
-    background-color: 'red';
+    width: 20%;
+    height: 20rem;
+    background-color: aliceblue;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 .characterImageContainer{
-    height: 60%;
+    height: 50%;
     width: 100%;
-
+    background-color: brown;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+}
+.cardTitle{
+    padding: 0.5rem;
+    background-color: rgb(211, 203, 199);
+    height: 45%;
+    border-bottom-right-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+}
+.cardImage{
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    /* copilot que me ensinou essa, serve para a imagem ficar em sua proporção certa */
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
 }
