--- a/src/app/components/cardList/cardList.module.css
+++ b/src/app/components/cardList/cardList.module.css
@@ -1,11 +1,15 @@
 .cardsList{
     width: 80%;
-    padding: 15%;
-    border-radius: 2rem;
+    height: 27rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    border-radius: 1rem;
     background-color: rgb(206, 213, 225, 0.7);
-    margin: 3rem;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    gap: 2rem;
 }
