--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -9,17 +9,33 @@
     background-image: url("https://preview.redd.it/how-should-hogwarts-look-like-in-the-max-tv-show-id-imagine-v0-9a5a3ssbjyzb1.jpg?width=1080&crop=smart&auto=webp&s=572562aa2a937dae1fadcfbbcbd4a613935607cd");
     background-size: cover;
 }
+.header{
+    width: 100%;
+    height: 15vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .pageTitleContainer{
     width: 20%;
+    height: 3rem;
     border-radius: 1rem;
     background-color: rgb(206, 213, 225, 0.7);
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
     padding: 1rem;
 }
 .pageTitle{
     color: rgb(20, 47, 86);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 2rem;
+    font-size: 1.5rem;
+}
+.content{
+    height: 85vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
